@@ -4,6 +4,9 @@ Changelog
 3.0.1 - unreleased
 ------------------
 
+- ``SessionPlugin.validate(ticket)`` method.
+  [elro]
+
 - Close <input> tags properly (chameleon compatibility)
   [swampmonkey]
 
